--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/akveo/ngx-admin.git"
+    "url": "git+https://github.com/duynguyen2906/angularwebmail.git"
   },
   "bugs": {
     "url": "https://github.com/akveo/ngx-admin/issues"
@@ -12,7 +12,7 @@
   "scripts": {
     "ng": "ng",
     "conventional-changelog": "conventional-changelog",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "build:prod": "npm run build -- --prod --aot",
     "test": "ng test",
@@ -26,9 +26,15 @@
     "docs": "compodoc -p src/tsconfig.app.json -d docs",
     "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
     "prepush": "npm run lint:ci",
-    "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s"
+     
+    "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
+    "deploy": "git push origin master && git push heroku master"
   },
+ 
   "dependencies": {
+     "typescript": "2.7.2",
+    "@angular/cli": "6.0.0",
+    "@angular/compiler-cli": "6.0.0",
     "@agm/core": "1.0.0-beta.2",
     "@angular/animations": "6.0.0",
     "@angular/common": "6.0.0",
@@ -74,7 +80,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.6.5",
+    "@angular-devkit/build-angular": "^0.6.3",
     "@angular/cli": "6.0.0",
     "@angular/compiler-cli": "6.0.0",
     "@angular/language-service": "6.0.0",
@@ -104,6 +110,6 @@
     "tslint": "5.7.0",
     "tslint-language-service": "0.9.6",
     "typescript": "2.7.2",
-    "webpack": "^4.9.1"
+    "webpack": "^4.8.3"
   }
 }
