--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/duynguyen2906/angularwebmail.git"
+    "url": "git+https://github.com/duynguyen2906/angularwebmail"
   },
   "bugs": {
     "url": "https://github.com/akveo/ngx-admin/issues"
@@ -15,6 +15,7 @@
     "start": "node server.js",
     "build": "ng build",
     "build:prod": "npm run build -- --prod --aot",
+    "postinstall": "ng build --aot -prod",
     "test": "ng test",
     "test:coverage": "rimraf coverage && npm run test -- --code-coverage",
     "lint": "ng lint",
@@ -26,19 +27,15 @@
     "docs": "compodoc -p src/tsconfig.app.json -d docs",
     "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
     "prepush": "npm run lint:ci",
-     
-    "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
-    "deploy": "git push origin master && git push heroku master"
+    "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s"
   },
- 
   "dependencies": {
-     "typescript": "2.7.2",
-    "@angular/cli": "6.0.0",
-    "@angular/compiler-cli": "6.0.0",
     "@agm/core": "1.0.0-beta.2",
     "@angular/animations": "6.0.0",
+    "@angular/cli": "^6.0.5",
     "@angular/common": "6.0.0",
     "@angular/compiler": "6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
     "@angular/core": "6.0.0",
     "@angular/forms": "6.0.0",
     "@angular/http": "6.0.0",
@@ -59,6 +56,7 @@
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
     "echarts": "^4.0.2",
+    "express": "^4.16.3",
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
@@ -70,19 +68,21 @@
     "ngx-echarts": "2.0.1",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
+    "path": "^0.12.7",
     "roboto-fontface": "0.8.0",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
     "socicon": "3.0.5",
     "tinymce": "4.5.7",
     "typeface-exo": "0.0.22",
+    "typescript": "2.7.2",
     "web-animations-js": "2.2.5",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.6.3",
-    "@angular/cli": "6.0.0",
-    "@angular/compiler-cli": "6.0.0",
+    "@angular-devkit/build-angular": "^0.6.5",
+    "@angular/cli": "^6.0.5",
+    "@angular/compiler-cli": "^6.0.0",
     "@angular/language-service": "6.0.0",
     "@compodoc/compodoc": "1.0.1",
     "@types/d3-color": "1.0.5",
@@ -93,6 +93,7 @@
     "@types/node": "6.0.90",
     "codelyzer": "4.0.2",
     "conventional-changelog-cli": "1.3.4",
+    "enhanced-resolve": "^3.3.0",
     "husky": "0.13.3",
     "jasmine-core": "2.6.4",
     "jasmine-spec-reporter": "4.1.1",
@@ -110,6 +111,10 @@
     "tslint": "5.7.0",
     "tslint-language-service": "0.9.6",
     "typescript": "2.7.2",
-    "webpack": "^4.8.3"
+    "webpack": "^4.9.1",
+    "engines": {
+      "node": "7.11.2",
+      "npm": "5.6.0"
+    }
   }
 }
