--- a/package.json
+++ b/package.json
@@ -93,6 +93,10 @@
     "@types/node": "6.0.90",
     "codelyzer": "4.0.2",
     "conventional-changelog-cli": "1.3.4",
+    "engines": {
+      "node": "8.11.2",
+      "npm": "5.6.0"
+    },
     "enhanced-resolve": "^3.3.0",
     "husky": "0.13.3",
     "jasmine-core": "2.6.4",
@@ -111,10 +115,6 @@
     "tslint": "5.7.0",
     "tslint-language-service": "0.9.6",
     "typescript": "2.7.2",
-    "webpack": "^4.9.1",
-    "engines": {
-      "node": "7.11.2",
-      "npm": "5.7.1"
-    }
+    "webpack": "^4.9.1"
   }
 }
