--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.6.5",
+    "@angular-devkit/build-optimizer": "^0.6.5",
     "@angular/cli": "^6.0.5",
     "@angular/compiler-cli": "^6.0.0",
     "@angular/language-service": "6.0.0",
