--- a/package.json
+++ b/package.json
@@ -66,9 +66,11 @@
     "ng2-smart-table": "1.2.2",
     "ng2-tree": "2.0.0-rc.4",
     "ngx-echarts": "2.0.1",
+    "nodemailer": "^4.6.5",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "path": "^0.12.7",
+    "promise": "^8.0.1",
     "roboto-fontface": "0.8.0",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
